Fix account info view on mobile

--- a/client/src/app/accountInfo/accountInfo.component.scss
+++ b/client/src/app/accountInfo/accountInfo.component.scss
@@ -1,41 +1,43 @@
 .account-info-header {
-    height: 250px;
-    width: 850px;
-    margin: 2vh auto;
+    display: flex;
+    flex-direction: row;
+    max-width: 850px;
     background-color: #f8f8f8;
     border: 3px groove #7a0018;
     border-radius: 12px;
-    padding: 25px 0;
+    margin: 1.6rem auto;
+}
+
+.account-info {
+    margin: 1.6rem;
+}
+
+.profile-pic-wrapper, .profile-details {
+    display: flex;
+    flex-direction: column;
+
 }
 
 .profile-pic-wrapper {
-    position: relative;
-    width: 25%;
-    height: 75%;
+    margin: 1.25em 4.7em 1.25em 1.25em;
 }
 
 .profile-pic {
-    position: absolute;
-    bottom: 0;
-    height: 70%;
-    width: auto;
+    height: auto;
+    width: 100%;
     border: 4px solid #7a0018;
     border-radius: 50%;
     background: #7a0018;
-    margin-top: 15%;
+    transform: scale(1.5);
 }
 
 .account-info-header-container {
     height: 100%;
-    margin-left: 50px;
+    margin: 3.125em;
     display: flex;
     flex-direction: row;
-}
-
-.profile-details {
-    padding-top: 5%;
-    width: 50%;
-    height: auto;
+    align-items: center;
+    width: 100%;
 }
 
 .account-buttons {
@@ -47,6 +49,7 @@
 .profile-name, .profile-role, .profile-shirt-size {
     color: #7A0018;
     font-family: Arial;
+    word-wrap: break-word;
 }
 
 .profile-shirt-size > h3, .profile-shirt-size > mat-icon, .profile-shirt-size > div {
@@ -69,4 +72,20 @@
 
 mat-form-field {
     width: 80%;
+}
+
+@media screen and (max-width: 700px) {
+    .account-info-header-container {
+        align-items: flex-start;
+        margin: 0;
+    }
+
+    .profile-pic-wrapper {
+        margin: 1.25rem 1.25rem 1.25rem 1rem;
+    }
+
+    .profile-pic {
+        transform: scale(1);
+        min-width: 5em;
+    }
 }
